kyverno/M0001-metadata-labels/resource.yaml
# Copyright (C) 2021 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ok
  labels:
    app.kubernetes.io/name: "kyverno-policies"
    app.kubernetes.io/instance: "kyverno-policies"
    app.kubernetes.io/component: "kyverno"
    app.kubernetes.io/part-of: "kyverno-policies"
    app.kubernetes.io/managed-by: "kubectl"
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ko
spec:
  containers:
  - name: nginx
    image: nginx:1.12
